# Graduation-project

./: .gitignore  .gitmodules  README.md  collision_log.txt  combined.urdf  drv_sim_grasp.py  gripper.py  load_drv90l.py  mvimpact_acquire.py  realtime_control.py  simEnv.py  sim_grasp.py  sim_grasp_ggcnn.py  sim_grasp_grconvnet.py  sim_grasp_gripper.py  test.tiff
delta_drv90l_support/: CMakeLists.txt  package.xml  readme.md
delta_drv90l_support/launch/: load_drv90l.launch  test_drv90l.launch
delta_drv90l_support/meshes/drv90l/collision/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_6.STL
delta_drv90l_support/meshes/drv90l/visual/: link_5.STL
delta_drv90l_support/urdf/: drv90l.gazebo  drv90l.urdf  drv90l.xacro  drv90l_macro.xacro  gripper.urdf
ggcnn/: cornell.py  function.py  ggcnn.py  ggcnn2.py  grasp.py  image.py  load_data.py  optimize.py  saver.py  train.py  train_ggcnn.py  validate.py
ggcnn/model/: best_model.pt
ggcnn/utils/dataset_processing/: grasp.py
ggcnn_new_dataset/: demo.py  ggcnn.py  train_ggcnn.py
ggcnn_new_dataset/models/: common.py  ggcnn2.py  loss.py
ggcnn_new_dataset/output/: arch.txt
ggcnn_new_dataset/utils/: ggcnn.py  saver.py
graspLabel/: generate_target_ggcnn.py  showlabel.py
logs/221031_1515_/: commandline_args.json  events.out.tfevents.1667225704.NLEINPC099
objects_model/objs/: object_list.txt
objects_model/test/: object_list.txt
pybullet_grasp/: sim_grasp.py
utils/: camera.py  collision_log.txt  create_colURDF.py  create_collision.py  mesh.py  random_list.py  tool.py
(+132 files in other folders)
